# dockerized-red

./: .editorconfig  .env.example  .readthedocs.yaml  Dockerfile  LICENSE  README.md  compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: about.md  index.md
docs/references/: build-args.md  editable-vars.md  variables.md
docs/user_guides/: add-ssh-key.md  use-docker-compose.md  use-docker.md
examples/: docker-compose.custom-python.yml  docker-compose.dev-instance.yml  docker-compose.postgres.yml  docker-compose.private-ssh.yml  docker-compose.yml
src/: check-required-parameters.sh  create-instance.sh  edit-instance.sh  entrypoint.sh  launch-instance.sh  venv-activate.sh
