[project]
name = "dockerized-red"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Sutaai", email = "sutaai@proton.me"},
]
dependencies = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.44"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
